<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/deleteSubjects"
        android:title="@string/delete_subjects"
        android:icon="@drawable/delete_icon"
        app:showAsAction="never"/>
    <item
        android:id="@+id/addNewSubject"
        android:title="@string/add_new_subject"
        android:icon="@drawable/add_icon"
        app:showAsAction="never"/>

    <item
        android:id="@+id/syncDataToFirebase"
        android:title="@string/sync_data_to_cloud"
        android:icon="@drawable/sync_icon"
        app:showAsAction="never"/>

    <item
        android:id="@+id/importDataFromFirebase"
        android:title="@string/import_from_cloud"
        android:icon="@drawable/import_from_cloud_icon"
        app:showAsAction="never"/>

    <item
        android:id="@+id/loginOrLogout"
        android:title="@string/login_logout"
        android:icon="@drawable/login_icon"
        app:showAsAction="never"/>

</menu>