<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/ds_purple"
                android:orientation="horizontal"
                android:padding="15dp">


                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/yellow"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="6"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titleTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/subject"
                        android:textSize="20sp"
                        android:textColor="@color/lightest_purple"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/totalTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/lightest_purple"
                        android:text="@string/_1_20" />
                </LinearLayout>

                <TextView
                    android:id="@+id/priorityTV"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/priority"
                    android:visibility="gone"
                    android:textColor="@color/red2"/>

                <ImageButton
                    android:id="@+id/expandBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:elevation="10dp"
                    android:visibility="visible"
                    app:srcCompat="@drawable/down_arrow"
                    app:tint="@color/lightest_purple"
                    android:contentDescription="@string/expands_the_item_layout" />

                <CheckBox
                    android:id="@+id/deleteCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/light_purple"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/deleteBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:visibility="gone"
                    app:srcCompat="@drawable/delete_icon"
                    android:contentDescription="@string/deletes_the_item" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/expandLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple2"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="gone"></LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>