<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/dark_purple"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskView">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_purple"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/ds_purple"
                        android:padding="5dp"
                        android:text="@string/subject"
                        android:textAlignment="center"
                        android:textColor="@color/lightest_purple"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/taskSubjTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center|start"
                        android:text="@string/subject"
                        android:textColor="@color/darkish_purple"
                        android:textSize="20sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_purple"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/ds_purple"
                        android:padding="5dp"
                        android:text="@string/task_name"
                        android:textAlignment="center"
                        android:textColor="@color/lightest_purple"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/taskNameEdtTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/transparent"
                        android:hint="@string/name"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:textColor="@color/darkish_purple"
                        android:textColorHint="@color/darkish_purple"
                        android:textSize="20sp"
                        tools:ignore="TextFields,VisualLintTextFieldSize" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_purple"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/ds_purple"
                        android:padding="5dp"
                        android:text="@string/task_desc"
                        android:textAlignment="center"
                        android:textColor="@color/lightest_purple"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/taskDescEdtTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/transparent"
                        android:hint="@string/desc"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine|text"
                        android:textColorHint="@color/darkish_purple"
                        android:textColor="@color/darkish_purple"
                        android:textSize="20sp"
                        tools:ignore="VisualLintTextFieldSize" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:id="@+id/deadlineLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_purple"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/ds_purple"
                        android:padding="5dp"
                        android:text="@string/task_deadline"
                        android:textAlignment="center"
                        android:textColor="@color/lightest_purple"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/datePickerLinear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp">

                        <CheckBox
                            android:id="@+id/deadlineCB"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:buttonTint="@color/ds_purple"
                            android:gravity="center" />

                        <TextView
                            android:id="@+id/dateTV"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            android:text="@string/date"
                            android:textColor="@color/darkish_purple"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/positiveBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/confirm"
                android:textStyle="bold"
                app:backgroundTint="@color/purple"
                app:cornerRadius="15dp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/negativeBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@color/red"
                app:cornerRadius="15dp"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>