<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:orientation="vertical" >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:backgroundTint="@color/dark_purple"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/titleTextView"
                android:gravity="center"
                android:background="@color/darkish_purple"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/lightest_purple"
                android:layout_height="43dp"
                android:text="@string/add_subject" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <EditText
                android:id="@+id/subjNameEdtTxt"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/rounded_view_corners"
                android:hint="@string/subject_name"
                android:minHeight="48dp"
                android:textColor="@color/darkish_purple"
                android:textColorHint="@color/darkish_purple"
                android:padding="10dp"
                android:textSize="20sp"
                android:inputType="text"
                android:importantForAutofill="no" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/addSubjNameBtn"
                android:layout_width="133dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/add"
                android:textStyle="bold"
                android:backgroundTint="@color/purple"
                app:cornerRadius="15dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>