<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/dark_purple"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/subRV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <LinearLayout
            android:id="@+id/deleteActionBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/light_purple"
            android:padding="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">


            <ImageView
                android:id="@+id/cancelBtn"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                app:tint="@color/dark_purple"
                app:srcCompat="@drawable/cancel_icon"
                android:contentDescription="@string/cancels_the_delete_function"/>

            <Space
                android:layout_width="60dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/deleteBtn"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                app:tint="@color/red3"
                app:srcCompat="@drawable/delete_icon"
                android:contentDescription="@string/deletes_the_selected_subject" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/adds_new_subject"
            android:focusable="true"
            app:backgroundTint="@color/yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.839"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.903"
            app:srcCompat="@drawable/add_icon"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/lightest_purple"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:itemTextColor="@color/dark_purple"
        app:itemIconTint="@color/dark_purple"
        app:menu="@menu/main_menu"
        app:headerLayout="@layout/header"
        tools:ignore="VisualLintBounds" />

</androidx.drawerlayout.widget.DrawerLayout>